# kcl

./: .gitmodules  README.md  TargetHippo.py
advancedML/Week 1/Tutorial 2/Solutions/: 2.1.PyTorch_Foundations_solutions.ipynb  2.2.simple_classification_regression_solutions.ipynb
advancedML/Week 2/Notebooks/: 3.1.Loss_functions_and_optimisers.ipynb  3.2.Architectures.ipynb  images.npz
advancedML/Week 2/Notebooks/.ipynb_checkpoints/: 3.2.Architectures-checkpoint.ipynb  3.2.Architectures.-checkpoint.ipynb
advancedML/Week 2/__MACOSX/Notebooks/: ._prem_vs_termwrois.pkl
machine_learning/classic_machine_learning/: CW1_Megalemos_Alexandros_MSc.ipynb  CW2_Megalemos_Alexandros_MSc.ipynb
machine_learning/neural_networks/: Alexandros_Megalemos_Coursework2.ipynb  Alexandros_Megalemos_Final_Project.ipynb
machine_learning/neural_networks/.ipynb_checkpoints/: Alexandros_Megalemos_Final_Project-checkpoint.ipynb
robotics/Tutorials/Tutorial 1/: Hello3DSlicer.docx  HelloROS.docx
robotics/catkin_ws/beginner_tutorials/: .bashrc
robotics/catkin_ws/devel/: .catkin  .rosinstall  env.bat  local_setup.bat  setup.sh
robotics/final/: README.md
robotics/final/Report/: .~lock.AssignmentReport.docx#  AssignmentReport.docx  ~$signmentReport.docx  ~WRL3600.tmp
robotics/final/images/: Connections.drawio  photos(1).docx  photos.docx
robotics/final/models/: IGTLink2.docx
robotics/final/models and scenes/: CortexLabelMap.nrrd  Displacement to color.txt  Displacement to color_2.txt  HippoLabelMap.nrrd  Pose.fcsv  RosCalibrationPanda.fcsv  RosCalibrationUR5.fcsv  Target.fcsv  cortex-label.nrrd
robotics/final/models and scenes/tests/: entries.fcsv
robotics/final/models/ros/: hippoROS.stl  hippoROS.vtk  vesselDilate1ROS.stl
robotics/final/models/slicer/: hippoSlicer.vtk  vesselDilate1Slicer.vtk
robotics/final/scenes/: 2020-05-19-Scene.mrml  AnnotationROI.acsv  AnnotationROI_1.acsv  Scene_Linux.mrml  VolumeProperty.vp  VolumeProperty_1.vp  scene_linux.mrml
robotics/ros/assignment2/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
robotics/ros/assignment2/log/: latest_build
robotics/ros/assignment_ws/: AssignmentReport.docx  PseudoUML.drawio  README.md  README.me  ~WRL3562.tmp
robotics/ros/assignment_ws/devel/: .catkin  setup.bat
robotics/ros/assignment_ws/images/: PseudoUML_whole.drawio
robotics/ros/assignment_ws/install/: .rosinstall  env.bat  local_setup.bat
robotics/ros/assignment_ws/report/: AssignmentReport.docx
robotics/ros/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
robotics/slicerAndRos/: 2020-03-12-Scene.mrml  AssignmentReport.docx  Target.fcsv
robotics/slicerAndRos/Images/: Alexandros_Megalemos_Coursework2.ipynb
robotics/slicerAndRos/Report/: AssignmentReport.docx
robotics/slicerAndRos/Scenes/: Default.fcsv  SlicerToRos.mrml
robotics/slicerAndRos/SlicerScene/: Scene-ISMR19.mrml  base_mm.stl  forearm_link.h5  forearm_mm.stl  needle.h5  needle_holder_mm.stl  shoulder_link.h5  shoulder_mm.stl  tool0.h5  upper_arm_link.h5  upperarm_mm.stl  wrist1_mm.stl  wrist2_mm.stl  wrist3_mm.stl  wrist_1_link.h5  wrist_2_link.h5  wrist_3_link.h5
robotics/slicerTutorials/PathPlanning/: CMakeLists.txt
robotics/slicerTutorials/Tutorial 1/: ~$llo3DSlicer.docx
robotics/slicerTutorials/Tutorial 1/ImageThresholding/: CMakeLists.txt
robotics/slicerTutorials/Tutorial 1/ImageThresholding/ImageThresHolding/: CMakeLists.txt  ImageThresHolding.py
robotics/slicerTutorials/Tutorial 2 and 3/: AssignmentReport.docx  PathPlanning Part1.docx  PathPlanning Part2.docx  ~$signmentReport.docx  ~$thPlanning Part1.docx
robotics/slicerTutorials/Tutorial 2 and 3/Assignment1/: .pydevproject  2020-01-25-Scene.mrml  2020-02-01-Scene.mrml  Assignment1.docx  Assignment1.py  CBFBG_vtkMRMLLabelMapVolumeNodeE.mrml  CMakeLists.txt  GeometryUtils.py  GoodPaths.vtk  PathPlanner.py  PathPlanning.py  PointUtils.py  Task1.py  ~$signment1.docx  ~WRL0045.tmp
robotics/software_integration/final/code/slicer/PathPlanner/: CMakeLists.txt
robotics/software_integration/final/code/slicer/PathPlanner/PathPlanner/: CMakeLists.txt  PathPlanner.py
robotics/software_integration/path_planning/: AssignmentReport.docx
robotics/software_integration/robotic_simulation/: README.md
robotics/software_integration/slicer_ros_integration/src/basic_robot/: package.xml
robotics/software_integration/slicer_ros_integration/src/basic_robot/src/: MoveValidityEnum.py
scientific_programming/algorithm_optimisation/: algorithmType.py  generate_images.py  main.py  pathing.py
scientific_programming/signal_processing/: Assignment 1.rar  main.py  signal.py  test_signal.py
(+1882 files in other folders)
