<?xml version="1.0"?>
<package format="2">
  <name>basic_robot</name>
  <version>0.0.0</version>
  <description>A basic two joint robot package</description>
  <maintainer email="k19058355@kcl.ac.uk">Alexandros Megalemos</maintainer>
  <license>N/A</license>
	
  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
